--- a/app/setting.html
+++ b/app/setting.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title></title>
+  <link href="assets/css/style.css" rel="stylesheet" />
   <link href="assets/css/setting.css" rel="stylesheet" />
 
 </head>
@@ -29,6 +30,11 @@
       <a id="alarm-clear" class="button red">Clear</a>
     </div>
   </div>
+  <script>
+    window.Jquery = window.$ = require("./lib/jquery")
+  </script>
+  <script src="lib/vue.js"></script>
+  <script src="assets/js/setting.js"></script>
 </body>
 </html>
 
